pushing modal and work card changes

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -20,7 +20,7 @@
   }
   
   .modal-container {
-    width: 300px;
+    max-width: 700px;
     margin: 0px auto;
     padding: 20px 30px;
     background-color: #fff;
@@ -30,9 +30,8 @@
     font-family: Helvetica, Arial, sans-serif;
   }
   
-  .modal-header h3 {
+  .modal-header {
     margin-top: 0;
-    color: #42b983;
   }
   
   .modal-body {
