--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -21,10 +21,12 @@
   
   .modal-container {
     max-width: 700px;
+    max-height: 700px;
     margin: 0px auto;
     padding: 20px 30px;
     background-color: #fff;
     border-radius: 2px;
+    overflow-y: scroll;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.33);
     transition: all 0.3s ease;
     font-family: Helvetica, Arial, sans-serif;
